--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1><span contenteditable>Your Name</span>'s Notes</h1>
+    <h1><span contenteditable id="nameid">Your Name</span>'s Notes</h1>
   </header>
   <main>
     <form>
@@ -20,7 +20,7 @@
       <textarea name="notes" id="notes-area"></textarea>
       <div class="buttons">
         <button id="save" type="submit">Save</button>
-        <button id="clear" type="button">Clear</button>
+        <button id="clear" type="clear">Clear</button>
       </div>
     </form>
   </main>
