--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1><span contenteditable id="nameid">Your Name</span>'s Notes</h1>
+    <h1><span contenteditable>Your Name</span>'s Notes</h1>
   </header>
   <main>
     <form>
