Add cookies function working Can't figure out how to make name personalized vs. just storing a name.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </header>
   <main>
     <form>
-      <label for="notes-area">Write your notes below!</label>
+      <label form="notes-area">Write your notes below!</label>
       <textarea name="notes" id="notes-area"></textarea>
       <div class="buttons">
         <button id="save" type="submit">Save</button>
-        <button id="clear" type="clear">Clear</button>
+        <button id="clear" type="button">Clear</button>
       </div>
     </form>
   </main>
